styles.css
/* COLORS:
Eggshell: F4F1DE
Apricot Cream: F2CC8F
Burnt Peach: E07A5F
Muted Teal: 81B29A
Twilight Indigo: 3D405B 

Sea Green: #00916e
Pine Teal: #005241
Evergreen: #003d2f
Linen: #feefe5
Bright amber: #f5c800
Cayenne red: #ee6123
Carmine: #b8002e
(dark font) Onyx: #001410

 Midnight violet: #160c28
*/
:root {
  --primary-color: #005241;
  --secondary-color: #f5c800;
  --tertiary-color: #f47036;
  --font-light: #faeaca;
  --font-dark: #001410;
  --lighter-green: #00916e;
}

.container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.index-box {
  width: 500px;
  height: 100px;
  /*background-color: var(--lighter-green);
  border: 5px solid var(--tertiary-color);*/
  padding: 10px;
  margin: 10px;
  box-sizing: border-box;
  border-radius: 15px;
  text-align: center;
}

.social-buttons {
  margin: 20px;
}

nav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

nav ul li {
  display: inline-block;
}

nav ul li a {
  display: block;
  padding: 0.5em;
  text-decoration: none;
  color: var(--font-dark);
  font-family: "Quantico", sans-serif;
}

nav ul li a:hover {
  background-color: var(--tertiary-color);
}

body {
  background: var(--primary-color);
  color: var(--font-light);
  font-family: "Source Serif 4", serif;
  font-size: 20px;
}

h1 {
  font-family: "Quantico", sans-serif;
  color: var(--tertiary-color);
  text-align: center;
  font-size: 48px;
}

h2 {
  font-family: "Quantico", sans-serif;
  color: var(--secondary-color);
  text-align: center;
}

h3 {
  font-family: "Lato", sans-serif;
  color: var(--tertiary-color);
  text-align: center;
}

.main a:link {
  color: var(--secondary-color);
}

.main a:visited {
  color: var(--tertiary-color);
}

h4 {
  color: var(--secondary-color);
  font-size: 16px;
  text-align: center;
}

hr {
  border: none; /* Removes default border */
  height: 2px; /* Sets the thickness of the line */
  background-color: var(--lighter-green); /* Sets the line color */
  width: 300px; /* Adjusts the width */
  margin: 10px auto; /* Centers the line with spacing */
}

figcaption {
  font-size: 16px;
  margin-left: 60px;
}

@media (max-width: 414px) {
  nav {
    top: 0;
    left: 0;
    width: 100%;
    position: fixed;
    text-align: center;
    background-color: var(--secondary-color);
  }
  .main {
    margin-top: 80px;
    padding: 0 0.75em;
  }
  .carousel {
    display: none;
  }
}

@media (min-width: 415px) and (max-width: 1024px) {
  nav {
    top: 0;
    left: 0;
    width: 100%;
    position: fixed;
    text-align: center;
    background-color: var(--secondary-color);
  }
  .main {
    margin-top: 80px;
    padding: 0 1em;
  }

  .carousel {
    display: none;
  }
}

@media (min-width: 1025px) {
  nav ul li a {
    font-size: 20px;
  }
  nav {
    height: 100%;
    width: 200px;
    top: 0;
    left: 0;
    position: fixed;
    text-align: center;
    padding-top: 150px;
    margin-left: 20px;
    z-index: 1;
    overflow-x: hidden;
    background-color: var(--secondary-color);
  }
  nav ul li {
    display: block;
    margin-bottom: 10px;
  }
  .main {
    margin-left: 25vw;
    margin-right: 15vw;
  }

  .grid-container {
    display: grid;
    margin-top: 30px;
    grid-template-columns: 1fr 1fr;
    gap: 20px;
    justify-content: center;
    align-items: center;
  }
  .column-item {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 15px;
    text-align: justify;
  }

  .carousel {
    position: relative;
    width: 500px;
    margin: auto;
    overflow: hidden;
    border: 2px solid var(--font-light);
  }

  .carousel-track {
    display: flex;
    transition: transform 0.4s ease;
  }

  .slide {
    width: 500px;
    height: 375px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 2rem;
    background: var(--primary-color);
  }

  button.prev,
  button.next {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    font-size: 2rem;
    background: rgba(0, 0, 0, 0.5);
    color: var(--tertiary-color);
    border: none;
    cursor: pointer;
    padding: 10px;
  }

  .prev {
    left: 10px;
  }
  .next {
    right: 10px;
  }
}

input[type="text"],
select {
  width: 90%;
  padding: 10px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 12px;
}

textarea {
  width: 90%;
  height: 120px;
  padding: 10px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  margin-top: 6px;
  margin-bottom: 12px;
}

input[type="submit"] {
  background-color: var(--lighter-green);
  color: white;
  padding: 12px 20px;
  border-radius: 4px;
  cursor: pointer;
}

input[type="submit"]:hover {
  background-color: #45a049;
}

